Fixed gallery images being squashed in sections

--- a/migration/migration.less
+++ b/migration/migration.less
@@ -46,7 +46,7 @@
         right: 12px;
     }
 
-    [data-name="row"] [data-name="gallery"] .gallery__image-link {
+    [data-name="row"] .gallery__image-link {
         padding-bottom: 25%;
 
         @media @mobile {
